...
                ToolbarItem {
                    if self.editMode == .inactive {
                        Button {
                            let note = model.createNote()
                            navPath.append(note)
                        } label: {
                            Label("Add Note", systemImage: "plus")
                        }
                    } else {
                        Button {
                            model.prepareToDeleteMultipleItems(notes: self.selection)
                        } label: {
                            Label("Delete", systemImage: "trash")
                        }
                    }
                }
                ToolbarItem(placement: .topBarLeading) {
                    Button {
                        self.model.logOut()
                    } label: {
                        Text("Logout")
                    }
                }
            }
            .toolbarBackground(.viewBackground, for: .navigationBar)
            .alert(isPresented: $model.deleteNotesAlertPresent) {
                Alert(title: Text("Are you sure?"), message: nil, primaryButton: .destructive(Text("Delete")) {
                    if let notesOffsetsToDelete = model.notesOffsetsToDelete {
                        model.deleteItemsUsingOffsets(at: notesOffsetsToDelete)
                        model.notesOffsetsToDelete = nil
                    } else if let notesToDelete = model.notesToDelete {
                        model.deleteMultipleNotes(notes: notesToDelete)
                        model.notesToDelete = nil
...
        }
    }
}

extension EditMode {
    var title: String {
        self == .active ? "Done" : "Edit"
    }

    mutating func toggle() {
        self = self == .active ? .inactive : .active
    }
}
...
