...
                    }
                Button {
                    Task {
                        await model.loginButtonPressed()
                    }
                } label: {
                    Text("Login")
                        .foregroundColor(.white)
                        .font(.system(size: 18))
                        .frame(width: 215, height: 44, alignment: .center)
                        .opacity(model.loginButtonEnabled ? 1.0 : 0.5)
                }
                .background(.secondary)
...
